--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <title>Idk</title>
 <script src="js/index.js"></script>
+<div class="container">
+  <img src="IMG_3673-removebg-preview.png" alt="Snow">
+  <button class="btn">Test</button>
+  
+</div>
