--- a/index.html
+++ b/index.html
@@ -2,6 +2,5 @@
 <script src="js/index.js"></script>
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" alt="Snow">
-  <button class="btn">Test</button>
-  
+  <button onclick="ChangeClicksBy1()">Change to Blue</button>
 </div>
