--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <title>Idk</title>
 <script src="js/index.js"></script>
 <div class="container">
-  <img src="IMG_3673-removebg-preview.png" alt="Snow">
-  <button onclick="ChangeClicksBy1()">Change to Blue</button>
+  <script>
+  <img src="IMG_3673-removebg-preview.png" alt="unfinished bingo card" />.ChangeClicksBy1()
 </div>
+    </script>
