--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <title>Idk</title>
 <script src="js/index.js"></script>
 <div class="container">
-  <script>
-  <img src="IMG_3673-removebg-preview.png" alt="unfinished bingo card" />.ChangeClicksBy1()
-</div>
-    </script>
+  <img src="IMG_3673-removebg-preview.png" onclick="ChangeClicksBy1()">
+    
