--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <title>Idk</title>
-<script src="js/index.js"></script>
+
 <div class="container">
-  <img src="IMG_3673-removebg-preview.png" onclick="ChangeClicksBy1()">
+  <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
+  <script> 
+    var pizza = 0
     
+    
+    function PizzaClicked() {
+  pizza += 1;
+   
+}
+</script>
