--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
-  <script> 
+</div>  
+  <script>
+
     var pizza = 0
     
     
