--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
 </div>  
-<p>The answer is: ${myVar}</p>
+<p>The answer is: ${pizza}</p>
 
 <script>
 // Functions
