--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
 </div>  
-<p>The answer is: ${pizza}</p>
+var myVar = "Hello World!";
+
+
 
 <script>
 // Functions
   function updateDisplay() {
-  const displayElement = document.getElementById("variable-value");
+  const displayElement = document.getElementById("variable-value"); = pizza;
   displayElement.textContent = pizza;
   }
 function PizzaClicked() {
