--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
 </div>  
-var myVar = "Hello World!";
+
 
 
 
 <script>
 // Functions
   function updateDisplay() {
-  const displayElement = document.getElementById("variable-value"); = pizza;
-  displayElement.textContent = pizza;
+   document.getElementById("variable-value"); = pizza;
+  
   }
 function PizzaClicked() {
   pizza += 1;
