--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
 // Functions
   function updateDisplay() {
-   document.getElementById("variable-value"); = pizza;
+   document.getElementById("variable-value") = pizza;
   
   }
 function PizzaClicked() {
