--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Idk</title>
 
-<p id="variable-value" style="color: black; font-family: rockwell; text-align: center;"></p>
+<p id="variable-value"></p>
 
 <div class="container">
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
