--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    updateDisplay();
   
   function updateDisplay() {
-   document.getElementById("variable-value") = pizza;
+   document.getElementById("result").innerHTML = pizza;
   
   }
 function PizzaClicked() {
