--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <img src="IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
 </div>  
 
-
+<h1 id="heading">Hello, codedamn!</h1>
 
 
 <script>
@@ -14,7 +14,7 @@
    updateDisplay();
   
   function updateDisplay() {
-   document.getElementById("result").innerHTML = pizza;
+   document.getElementById("variable-value").innerHTML = pizza;
   
   }
 function PizzaClicked() {
