--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    updateDisplay();
   
   function updateDisplay() {
-   document.getElementById("heading").innerHTML = "Hello, " + name + "!";
+   document.getElementById("heading").innerHTML = "Sec, " + pizza + "!";
   
   }
 function PizzaClicked() {
