--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    updateDisplay();
   
   function updateDisplay() {
-   document.getElementById("heading").innerHTML = "Sec, " + pizza + "!";
+   document.getElementById("variable-value").innerHTML = pizza
   
   }
 function PizzaClicked() {
