--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p id="variable-value"></p>
 <br>
 <div class="container">
-  <img src="assets/IMG_3673-removebg-preview.png" onclick="PizzaClicked()">
+  <img src="assets/assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
 </div>  
 
 
