--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Idk</title>
 
-<p id="variable-value" style="font-family: Rockwell;"></p>
+<p id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
   <img src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
