--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<title>Idk</title>
+<title>PIZZA CLICKER</title>
 
 <p id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
-  <img src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
+  <img style="display: grid; place-items: center;" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
 </div>  
 
 
