--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <p id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
-  <img style="display: grid; place-items: center;" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
+  <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
 </div>  
 
-
+<style>
+  .img {
+    top: 50;
+  }
+</style>
 <script>
 let pizza = 0
     
