--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <style>
   .img {
-    top: 50;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
   }
 </style>
 <script>
