--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>PIZZA CLICKER</title>
 
-<p id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
+<p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
   <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
@@ -12,6 +12,9 @@
     justify-content: center;
     align-items: center; 
   }
+.counter {
+  font-size: 20px;
+}
 </style>
 <script>
 let pizza = 0
