--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     background-color: #F0AB02;
   }
   .img {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+    margin: auto; 
   }
 .counter {
   font-size: 50px;
