--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     background-color: #F0AB02;
   }
   .img {
-    right: 500;
-    width: 300;
-    height: auto;
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   }
 .counter {
   font-size: 50px;
