--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+    width: 300;
+    height: auto;
   }
 .counter {
   font-size: 50px;
