--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
-  <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()">
+  <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()" class="bottom-image">
 </div>  
 
 <style>
+  img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; /* Optional, for full-width image */
+}
+
+  
   body {
     background-color: #F0AB02;
   }
