--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 <style>
   img {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100%; /* Optional, for full-width image */
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%); /* Adjusts for vertical centering */
 }
+
 
   
   body {
