--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   min-height: 100vh; /* Ensures content fills the viewport */
 }
 
-img {
-  margin: auto; /* Centers horizontally and vertically */
-  margin-top: auto; /* Pushes image to bottom if content above */
+.img {
+  position: fixed;
+  bottom: 0;
+  left: 75%;
+  transform: translateX(-50%);
 }
+
 
 
 
