--- a/index.html
+++ b/index.html
@@ -25,20 +25,12 @@
 <script>
   
 
-    
-const storedData = localStorage.getItem("pizza");
-
-// Check if data was found
-if (storedData) {
-  // Use the retrieved data
-  let pizza = localStorage.getItem("pizza");
-} else {
-  let pizza = 1
-}
+    !
+var x = localStorage.getItem("pizza");
 
     function updateDisplay() {
   const displayElement = document.getElementById("variable-value");
-      document.cookie = "Pizza=" + pizza;
+      
   displayElement.textContent = pizza;
 }
 
