--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ if (storedData) {
   // Use the retrieved data
   console.log(storedData);
 } else {
-  let pizza = 0
+  let pizza = 1
+  updateDisplay();
 }
 
     function updateDisplay() {
