--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ updateDisplay(); // Initial display
     localStorage.setItem('pizza', 0);
   }
   // Retrieve the value from local storage and set it to the "pizza" variable
-  const pizza = localStorage.getItem('pizza');
+  let pizza = localStorage.getItem('pizza')
 
   // Use the pizza variable as needed
   console.log('Pizza from local storage:', pizza);
