--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ updateDisplay(); // Initial display
     // Set the value to 0 in local storage if it doesn't exist
     localStorage.setItem('pizza', 0);
   }
+  else 
   // Retrieve the value from local storage and set it to the "pizza" variable
   let pizza = localStorage.getItem('pizza')
 
