--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ updateDisplay(); // Initial display
   if (!localStorage.getItem('pizza')) {
     // Set the value to 0 in local storage if it doesn't exist
     localStorage.setItem('pizza', 1);
+    updateDisplay();
   }
   else 
   // Retrieve the value from local storage and set it to the "pizza" variable
