--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </style>
 <script>
   
-let pizza = 0
+
     
     function updateDisplay() {
   const displayElement = document.getElementById("variable-value");
@@ -50,7 +50,8 @@ updateDisplay(); // Initial display
 
   
 let pizza = localStorage.getItem('pizza', 0);
-
+updateDisplay();
+  
   // Use the pizza variable as needed
   console.log('Pizza from local storage:', pizza);
 });
