--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </div>
 
 <style>
-  img {
+img {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -30,7 +30,7 @@
 </style>
 
 <script>
-  let pizza = localStorage.getItem('pizza') || 0; // Get initial value from local storage or set to 0
+  let pizza = parseInt(localStorage.getItem('pizza')) || 0; // Parse the value from local storage to ensure it's a number
 
   function updateDisplay() {
     const displayElement = document.getElementById("variable-value");
@@ -40,8 +40,10 @@
   updateDisplay(); // Initial display
 
   function PizzaClicked() {
-    pizza += 1;
+    pizza++; // Increment the pizza count
     localStorage.setItem('pizza', pizza);
     updateDisplay();
   }
 </script>
+
+
