--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
 <style>
 img {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%; /* Optional, for full-width image */
+position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+    width: 275;
+    height: auto;
   }
 
   body {
