--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <title>PIZZA CLICKER</title>
 
 <p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
+
+<p class="counter" id="event-value" style="font-family: Rockwell; text-align: center;"></p>
 <br>
 <div class="container">
   <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()" class="bottom-image">
