--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>PIZZA CLICKER</title>
+<title>Pizza Clicker</title>
 
 <p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 
@@ -50,12 +50,8 @@ position: absolute;
   function PizzaClicked() {
     pizza++; // Increment the pizza count
     localStorage.setItem('pizza', pizza);
-     // Export Pizza Var
-export const Pizza = pizza;
     updateDisplay();
   }
 
 
 </script>
-
-<script src="myscripts.js"></script>
