--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ let ClickPerPress = 1
 
   // When Pizza Clicked
   function PizzaClicked() {
-    pizza+ClickPerPress; // Increment the pizza count
+    pizza += ClickPerPress; // Increment the pizza count
     localStorage.setItem('pizza', pizza);
     updateDisplay();
   }
