--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
 
-
 <br>
 <div class="container">
   <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()" class="bottom-image">
@@ -10,48 +9,58 @@
 
 <style>
 img {
-position: absolute;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-    width: 275;
-    height: auto;
-  }
+  width: 275px;
+  height: auto;
+  transition: transform 0.3s ease-in-out; /* Add a transition for smooth animation */
+}
 
-  body {
-    background-color: #F0AB02;
-  }
+img.clicked {
+  transform: scale(1.2); /* Scale the image up when clicked */
+}
 
-  .img {
-    margin: 0 auto;
-    width: 300;
-    height: auto;
-  }
+body {
+  background-color: #F0AB02;
+}
 
-  .counter {
-    font-size: 60px;
-  }
+.img {
+  margin: 0 auto;
+  width: 300px;
+  height: auto;
+}
+
+.counter {
+  font-size: 60px;
+}
 </style>
 
 <script>
-   // Var
+// Var
 let ClickPerPress = 1
-  // Pizza Saver
-  let pizza = parseInt(localStorage.getItem('pizza')) || 0; // Parse the value from local storage to ensure it's a number
+// Pizza Saver
+let pizza = parseInt(localStorage.getItem('pizza')) || 0; // Parse the value from local storage to ensure it's a number
 
-  function updateDisplay() {
-    const displayElement = document.getElementById("variable-value");
-    displayElement.textContent = pizza;
-  }
+function updateDisplay() {
+  const displayElement = document.getElementById("variable-value");
+  displayElement.textContent = pizza;
+}
 
-  updateDisplay(); // Initial display
+updateDisplay(); // Initial display
 
-  // When Pizza Clicked
-  function PizzaClicked() {
-    pizza += ClickPerPress; // Increment the pizza count
-    localStorage.setItem('pizza', pizza);
-    updateDisplay();
-  }
+// When Pizza Clicked
+function PizzaClicked() {
+  const pizzaImg = document.querySelector('.img');
+  pizzaImg.classList.add('clicked'); // Add the 'clicked' class to trigger animation
 
+  setTimeout(() => {
+    pizzaImg.classList.remove('clicked'); // Remove the class after a short delay
+  }, 300);
 
+  pizza += ClickPerPress; // Increment the pizza count
+  localStorage.setItem('pizza', pizza);
+  updateDisplay();
+}
 </script>
