--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <br>
 <div class="container">
   <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()" class="bottom-image">
+  <img class="upgrade-1" src="assets/Upgrade-1.png" onclick="Upgrade1()" class="upgrade-image">
 </div>
 
 <style>
