--- a/index.html
+++ b/index.html
@@ -1,67 +1,39 @@
-<title>Pizza Clicker</title>
-
-<p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
-
-<br>
-<div class="container">
-  <img class="img" src="assets/IMG_3673-removebg-preview 2.png" onclick="PizzaClicked()" class="bottom-image">
-  <img class="upgrade-1" src="assets/Upgrade-1.png" onclick="Upgrade1()" class="upgrade-image">
-</div>
-
-<style>
-img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 275px;
-  height: auto;
-  transition: transform 0.2s ease-in-out; /* Add a transition for smooth animation */
-}
-
-img.clicked {
-  transform: scale(1.2); /* Scale the image up when clicked */
-}
-
-body {
-  background-color: #F0AB02;
-}
-
-.img {
-  margin: 0 auto;
-  width: 300px;
-  height: auto;
-}
-
-.counter {
-  font-size: 60px;
-}
-</style>
-
 <script>
-// Var
-let ClickPerPress = 1
-// Pizza Saver
-let pizza = parseInt(localStorage.getItem('pizza')) || 0; // Parse the value from local storage to ensure it's a number
+let pass = prompt("Restricted Access! Enter the password to enter this site!");
+let pwd = "ProtonStaff1";
 
-function updateDisplay() {
-  const displayElement = document.getElementById("variable-value");
-  displayElement.textContent = pizza;
+if (pass === null) { // Check for canceled prompt
+  location.reload(); 
+} else if (pass.toLowerCase() == pwd.toLowerCase()) { 
+  alert('Welcome Staff!');
+} else {
+  alert('Incorrect password. Access denied.'); 
+  location.reload(); 
 }
 
-updateDisplay(); // Initial display
+// Function to show temporary input feedback with asterisks 
+function showTemporaryInput(inputField, duration) {
+  const originalValue = inputField.value;
+  let maskedValue = '';
 
-// When Pizza Clicked
-function PizzaClicked() {
-  const pizzaImg = document.querySelector('.img');
-
+  const maskCharacter = '*';
+  const intervalId = setInterval(() => {
+    if (inputField.value.length > maskedValue.length) {
+      maskedValue += maskCharacter;
+    }
+    inputField.value = maskedValue;
+  }, duration / 10); // Adjust masking speed by changing '/ 10'
 
   setTimeout(() => {
-    pizzaImg.classList.remove('clicked'); // Remove the class after a short delay
-  }, 300);
+    clearInterval(intervalId);
+    inputField.value = originalValue;
+  }, duration);
+}
 
-  pizza += ClickPerPress; // Increment the pizza count
-  localStorage.setItem('pizza', pizza);
-  updateDisplay();
+// Modify the prompt to call the feedback function
+let pass = prompt("Restricted Access! Enter the password to enter this site!", ""); // Empty default for security 
+const inputField = document.querySelector('input[type="password"]');
+if (inputField) {
+  showTemporaryInput(inputField, 1000); // Duration of 1000 milliseconds (1 second)
 }
 </script>
